[package]
name = "omni-spacetimedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
byteorder = "1.5.0"
parking_lot = { version = "0.12.1", features = ["send_guard", "arc_lock"] }

# omnipaxos = { git = "https://github.com/haraldng/omnipaxos", branch = "unicache-serde", features = ["unicache", "serde"] }
# omnipaxos_storage = { git = "https://github.com/haraldng/omnipaxos", branch="unicache-serde"}

omnipaxos = { version = "0.2.2", features=["serde"] }
omnipaxos_storage = "0.2.2"

serde = { version = "1.0.197", features = ["derive", "rc", "alloc"] }
serde_derive = "1.0"
serde_json = "1"




regex = "1.10.3"
tokio = {version = "1.36.0", features = ["full"]}

[dev-dependencies]
tempdir = "0.3.7"